--- a/notebooks/01_cleaning_ttc_data_2023 (1).ipynb
+++ b/notebooks/01_cleaning_ttc_data_2023 (1).ipynb
@@ -559,8 +559,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "34a9839d-8b1b-473f-b340-46d2954d0d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bound        8507\n",
+      "line           48\n",
+      "date            0\n",
+      "time            0\n",
+      "day             0\n",
+      "station         0\n",
+      "code            0\n",
+      "min_delay       0\n",
+      "min_gap         0\n",
+      "vehicle         0\n",
+      "timestamp       0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 1. Quick null summary\n",
+    "nulls = df.isna().sum().sort_values(ascending=False)\n",
+    "print(nulls)\n",
+    "\n",
+    "# 2. Replace missing text fields with 'Unknown' for grouping visuals\n",
+    "text_cols = [\"bound\", \"line\", \"vehicle\"]\n",
+    "df[text_cols] = df[text_cols].fillna(\"Unknown\")\n",
+    "\n",
+    "# 3. Decide whether to keep or drop 0-minute rows\n",
+    "nonzero = df[df[\"min_delay\"] > 0]      # for duration analyses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9d81233-2f82-41af-95a7-15d02e7eec83",
    "metadata": {},
    "outputs": [],
    "source": []
